[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/unnamed-4.png" type="Texture" id=1]
[ext_resource path="res://GunLeftTerm.gd" type="Script" id=2]
[ext_resource path="res://Right.gd" type="Script" id=3]
[ext_resource path="res://Up.gd" type="Script" id=4]
[ext_resource path="res://Down.gd" type="Script" id=5]
[ext_resource path="res://Gunners.gd" type="Script" id=6]

[sub_resource type="CapsuleShape2D" id=3]
radius = 18.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 12.0
height = 0.0

[sub_resource type="CapsuleShape2D" id=1]
radius = 14.0
height = 22.0

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -190, -1 )
shape = SubResource( 3 )
disabled = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( -162, 11 )
rotation = 0.785398
shape = SubResource( 2 )
one_way_collision = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2( -38, 174 )
shape = SubResource( 1 )
one_way_collision = true

[node name="CollisionShape2D4" type="CollisionShape2D" parent="."]
position = Vector2( -12, 186 )
rotation = 1.5708
shape = SubResource( 2 )
one_way_collision = true

[node name="CollisionShape2D5" type="CollisionShape2D" parent="."]
position = Vector2( 26, -188 )
rotation = -1.5708
shape = SubResource( 1 )
one_way_collision = true

[node name="CollisionShape2D6" type="CollisionShape2D" parent="."]
position = Vector2( 36, -162 )
rotation = -1.5708
shape = SubResource( 2 )
one_way_collision = true

[node name="CollisionShape2D7" type="CollisionShape2D" parent="."]
position = Vector2( 175, -11 )
rotation = -1.39626
shape = SubResource( 1 )
one_way_collision = true

[node name="CollisionShape2D8" type="CollisionShape2D" parent="."]
position = Vector2( 185, 15 )
rotation = -1.5708
shape = SubResource( 2 )
one_way_collision = true

[node name="Right" type="Area2D" parent="."]
position = Vector2( 247, 0 )
script = ExtResource( 3 )

[node name="GunRight" type="Sprite" parent="Right"]
position = Vector2( 9, 0 )
texture = ExtResource( 1 )

[node name="Left" type="Area2D" parent="."]
position = Vector2( -247, 0 )
script = ExtResource( 2 )

[node name="GunLeft" type="Sprite" parent="Left"]
position = Vector2( -7, 0 )
texture = ExtResource( 1 )
flip_h = true

[node name="Up" type="Area2D" parent="."]
position = Vector2( 0, -247 )
script = ExtResource( 4 )

[node name="GunUp" type="Sprite" parent="Up"]
position = Vector2( 0, -13 )
rotation = 1.5708
flip_v = true

[node name="Sprite" type="Sprite" parent="Up/GunUp"]
position = Vector2( 6, 0.999978 )
rotation = -3.14159
texture = ExtResource( 1 )

[node name="Down" type="Area2D" parent="."]
position = Vector2( 0, 247 )
script = ExtResource( 5 )

[node name="GunDown" type="Sprite" parent="Down"]
position = Vector2( 0, 9 )
rotation = 1.5708
texture = ExtResource( 1 )

[node name="GunLeftTerm" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GunLeftTerm"]
position = Vector2( -188, -1 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="GunLeftTerm"]
position = Vector2( -162, 11 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="GunRightTerm" type="Area2D" parent="."]

[node name="CollisionShape2D7" type="CollisionShape2D" parent="GunRightTerm"]
position = Vector2( 175, -11 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="GunRightTerm"]
position = Vector2( 185, 15 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="GunUpTerm" type="Area2D" parent="."]

[node name="CollisionShape2D5" type="CollisionShape2D" parent="GunUpTerm"]
position = Vector2( 26, -188 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="GunUpTerm"]
position = Vector2( 36, -162 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="GunDownTerm" type="Area2D" parent="."]

[node name="CollisionShape2D3" type="CollisionShape2D" parent="GunDownTerm"]
position = Vector2( -38, 174 )
shape = SubResource( 1 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="GunDownTerm"]
position = Vector2( -12, 186 )
rotation = 1.5708
shape = SubResource( 2 )

[connection signal="area_entered" from="GunLeftTerm" to="Left" method="_on_GunLeftTerm_area_entered"]
[connection signal="area_exited" from="GunLeftTerm" to="Left" method="_on_GunLeftTerm_area_exited"]
[connection signal="area_entered" from="GunRightTerm" to="Right" method="_on_GunRightTerm_area_entered"]
[connection signal="area_exited" from="GunRightTerm" to="Right" method="_on_GunRightTerm_area_exited"]
[connection signal="area_entered" from="GunUpTerm" to="Up" method="_on_GunUpTerm_area_entered"]
[connection signal="area_exited" from="GunUpTerm" to="Up" method="_on_GunUpTerm_area_exited"]
[connection signal="area_entered" from="GunDownTerm" to="Down" method="_on_GunDownTerm_area_entered"]
[connection signal="area_exited" from="GunDownTerm" to="Down" method="_on_GunDownTerm_area_exited"]
